--- a/java_compile/src/main/resources/application.properties
+++ b/java_compile/src/main/resources/application.properties
@@ -12,8 +12,8 @@ com.jtang.spark.appName = java_compile
 
 spring.datasource.url=jdbc:mysql://localhost/seec_ai_cloud
 spring.datasource.username=root
-spring.datasource.password=123456
-
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
